--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -26,7 +26,6 @@ celery = "^5.2.1"
 django-celery-results = "^2.2.0"
 django-stdimage = "^5.3.0"
 Pillow = "^9.0.1"
-Django = "^3.2.13"
 django-react-templatetags = "^7.0.0"
 djangorestframework = "^3.13.1"
 django-compressor = "^4.0"
@@ -38,6 +37,7 @@ django-typed-models = "^0.11.1"
 drf-writable-nested = "^0.6.4"
 django-clone = "^3.0.3"
 django-cleanup = "^6.0.0"
+django = "^4.1.7"
 
 [tool.poetry.dev-dependencies]
 factory_boy = "^2.12.0"
@@ -62,6 +62,7 @@ django-rich-logging = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
 djlint = "^1.19.6"
+django-upgrade = "^1.13.0"
 
 [tool.isort]
 multi_line_output = 3
